added videos to Readme

--- a/README
+++ b/README
@@ -12,8 +12,16 @@ License: MIT
 Contributing
 Verna Heyne
 
-Tests
+Installation
 Graphql, Apollo/Client, Apollo Server Express, Express
 
+Videos
+Video that shows working website:
+https://drive.google.com/file/d/1gJzvA_ZvltYosjY9FsR16_YeWHoGQWnM/view
+Video that shows Heroku issues:
+https://drive.google.com/file/d/1D2fqW7q3Rnfd6TKimCTsvx2ZGW3Gu2sg/view
+
+
 Questions
-Email: vkheyne@gmail.com Github: Github Profile Link
+Email: vkheyne@gmail.com Github: https://github.com/HeyneV/book-search-engine
+
